style.css
body {
  background: #222222;
  font-family: "Helvetica Neue","Helvetica",Arial,"Lucida   Grande",sans-serif;
  width: 100%;
  height: 100%;
}

h3 {
  font-size: 1.5em;
  font-weight: 100;
  letter-spacing: 1em;
  text-shadow: 0px 0px 20px #6EC3EC;
  color: #6EC3EC;
  display: inline-block;
}

.container {
  font-size: 16px;
  top: 40%;
  left: 30%;
  position: absolute;
  color: #FFFFFF;
  text-align: center;
}

.bar {
  height: .3em;
  width: 30em;
  border-radius: 10px;
  background: transparent;
  box-shadow: inset 0px 0px 8px #323232;
  overflow: hidden;
  padding: 5px;
}

.progress {
  height: inherit;
  border-radius: inherit;
  width: 0;
  background: #6EC3EC;
  animation: load 3s linear infinite;
  animation-delay: 2s;
}

@keyframes load {
  0% {
    width: 0%;
  }
  50% {
    width: 100%;
  }
  100% {
    width: 0%;
    float: right;
  }
}

